// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskItem Snapshots renders TaskItem snapshot correctly 1`] = `
<div
  className="bg-gray-50 border border-gray-200 rounded-lg p-4 transition-shadow hover:shadow-md"
  data-testid="task-item"
>
  <h2
    className="font-bold text-lg"
  >
    Snapshot Task
  </h2>
  <p
    className="text-gray-700"
  >
    Snapshot Description
  </p>
  <p
    className="text-sm text-gray-500"
  >
    Due: 
    2024-12-31
  </p>
  <p
    className="text-sm text-red-600"
  >
    Pending
  </p>
</div>
`;

exports[`TaskItem Snapshots renders overdue TaskItem snapshot correctly 1`] = `
<div
  className="bg-red-50 border border-gray-200 rounded-lg p-4 transition-shadow hover:shadow-md"
  data-testid="task-item"
>
  <h2
    className="font-bold text-lg"
  >
    Overdue Task
  </h2>
  <p
    className="text-gray-700"
  >
    Past due date
  </p>
  <p
    className="text-sm text-gray-500"
  >
    Due: 
    2023-01-01
  </p>
  <p
    className="text-sm text-red-600"
  >
    Pending
  </p>
</div>
`;

exports[`renders TaskItem snapshot correctly 1`] = `
<div
  className="bg-gray-50 border border-gray-200 rounded-lg p-4 transition-shadow hover:shadow-md"
>
  <h2
    className="font-bold text-lg"
  >
    Snapshot Task
  </h2>
  <p
    className="text-gray-700"
  >
    Snapshot Description
  </p>
  <p
    className="text-sm text-gray-500"
  >
    Due: 
    2024-12-31
  </p>
  <p
    className="text-sm text-red-600"
  >
    Pending
  </p>
</div>
`;
